force-app/main/default/objects/ST_ACR_Contracted_Price__c/ST_ACR_Contracted_Price__c.object-meta.xml
<CustomObject>
    <label>ACR Contracted Price</label>
    <nameField>
        <displayFormat>ACRC-{0000}</displayFormat>
        <label>ACR Contracted Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACR Contracted Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>