force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight Charge</fullName>
            </value>
            <value>
                <fullName>Liability Charge</fullName>
            </value>
            <value>
                <fullName>Offline Charge</fullName>
            </value>
            <value>
                <fullName>Weight Charge</fullName>
            </value>
            <value>
                <fullName>BVC Valuation Charge</fullName>
            </value>
            <value>
                <fullName>Docket Charge</fullName>
            </value>
            <value>
                <fullName>Fuel Charge</fullName>
            </value>
            <value>
                <fullName>Holiday Charge</fullName>
            </value>
            <value>
                <fullName>Fuel Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>