force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <label>Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>