force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Level_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Rate__c</fullName>
    <label>Level 1 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>