force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Maximum_Slab_Rate__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Slab_Rate__c</fullName>
    <label>Maximum Slab Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>