force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Misfit_Rate_UOM__c.field-meta.xml
<CustomField>
    <fullName>Misfit_Rate_UOM__c</fullName>
    <label>Rate UOM (Misfit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross weight</fullName>
            </value>
            <value>
                <fullName>Net Weight</fullName>
            </value>
            <value>
                <fullName>Per Shipment</fullName>
            </value>
            <value>
                <fullName>Package Weight</fullName>
            </value>
            <value>
                <fullName>Per Lakhs</fullName>
            </value>
            <value>
                <fullName>% of Invoice Value</fullName>
            </value>
            <value>
                <fullName>% of Freight Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>