force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_ACR_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>ST_ACR_Package_Type__c</fullName>
    <label>ACR Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_ACR_Package_Type</valueSetName>
    </valueSet>
</CustomField>