force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_Active__c.field-meta.xml
<CustomField>
    <fullName>ST_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>