force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_Contract__c.field-meta.xml
<CustomField>
    <fullName>ST_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ACR Contracted Price</relationshipLabel>
    <relationshipName>ACR_Contracted_Price</relationshipName>
    <type>Lookup</type>
</CustomField>