force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>ST_Customer_Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ACR Contracted Price</relationshipLabel>
    <relationshipName>ACR_Contracted_Price</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>