force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_Freight_on_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>ST_Freight_on_Invoice_Value__c</fullName>
    <label>Freight on Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>