force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/ST_Order__c.field-meta.xml
<CustomField>
    <fullName>ST_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>ACR Contracted Price</relationshipLabel>
    <relationshipName>ACR_Contracted_Price</relationshipName>
    <type>Lookup</type>
</CustomField>