force-app/main/default/objects/ST_ACR_Contracted_Price__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>ACR Contracted Price</relationshipLabel>
    <relationshipName>ACR_Contracted_Price</relationshipName>
    <type>Lookup</type>
</CustomField>