force-app/main/default/objects/ST_ACR_Contracted_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ST_Order__c</columns>
    <columns>ST_Contract__c</columns>
    <columns>ST_ACR_Package_Type__c</columns>
    <columns>ST_Active__c</columns>
    <columns>ST_Customer_Account__c</columns>
    <columns>ST_Rate_Amount__c</columns>
    <columns>ST_Rate_UOM__c</columns>
    <columns>ST_Customer_Product_Category__c</columns>
    <columns>ST_Freight_on_Invoice_Value__c</columns>
    <columns>ST_Liability_Coverage__c</columns>
    <columns>ST_Minimum_Freight__c</columns>
    <columns>ST_Offline_Charge__c</columns>
    <columns>ST_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>